Fix word-break in some text inputs, fix minor tags

--- a/css/output.css
+++ b/css/output.css
@@ -660,6 +660,9 @@
   .break-all {
     word-break: break-all;
   }
+  .break-keep {
+    word-break: keep-all;
+  }
   .text-card-foreground {
     color: var(--color-card-foreground);
   }
